feat: OpenRouter integration
